force-app/main/default/objects/Experian_Business__c/Experian_Business__c.object-meta.xml
<CustomObject>
    <description>Store the Experian Business Account detail</description>
    <label>Experian Business</label>
    <nameField>
        <label>Experian Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Business</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>