force-app/main/default/objects/Experian_Business__c/fields/Bank_Data_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Bank_Data_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Data Indicator</label>
    <type>Checkbox</type>
</CustomField>