force-app/main/default/objects/Experian_Business__c/fields/bf_business_type__c.field-meta.xml
<CustomField>
    <fullName>bf_business_type__c</fullName>
    <label>Business Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>