force-app/main/default/objects/Experian_Business__c/fields/bf_Date_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>bf_Date_of_Incorporation__c</fullName>
    <label>Date of Incorporation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>