force-app/main/default/objects/Experian_Business__c/fields/bf_File_Established_Date__c.field-meta.xml
<CustomField>
    <fullName>bf_File_Established_Date__c</fullName>
    <label>File Established Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>