force-app/main/default/objects/Experian_Business__c/fields/bf_Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>bf_Years_in_Business__c</fullName>
    <label>Years in Business</label>
    <length>20</length>
    <type>Text</type>
</CustomField>