force-app/main/default/objects/Experian_Business__c/fields/BIN__c.field-meta.xml
<CustomField>
    <fullName>BIN__c</fullName>
    <externalId>true</externalId>
    <label>BIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>