force-app/main/default/objects/Experian_Business__c/fields/Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone__c</fullName>
    <description>Experian Business Phone</description>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>