force-app/main/default/objects/Experian_Business__c/fields/cfs_Active_Business_Indicator__c.field-meta.xml
<CustomField>
    <fullName>cfs_Active_Business_Indicator__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Business Indicator</label>
    <type>Checkbox</type>
</CustomField>