force-app/main/default/objects/Experian_Business__c/fields/cfs_Business_Risk_Triggers_Indicator__c.field-meta.xml
<CustomField>
    <fullName>cfs_Business_Risk_Triggers_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Risk Triggers Indicator</label>
    <type>Checkbox</type>
</CustomField>