force-app/main/default/objects/Experian_Business__c/fields/cfs_Matching_Business_Indicator__c.field-meta.xml
<CustomField>
    <fullName>cfs_Matching_Business_Indicator__c</fullName>
    <description>commercialFraudShieldSummary</description>
    <label>Matching Business Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>