force-app/main/default/objects/Experian_Business__c/fields/cfs_Name_Address_Verification_Indicator__c.field-meta.xml
<CustomField>
    <fullName>cfs_Name_Address_Verification_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Name Address Verification Indicator</label>
    <type>Checkbox</type>
</CustomField>