force-app/main/default/objects/Experian_Business__c/fields/cfs_Possible_OFAC_Match__c.field-meta.xml
<CustomField>
    <fullName>cfs_Possible_OFAC_Match__c</fullName>
    <label>Possible OFAC Match</label>
    <length>50</length>
    <type>Text</type>
</CustomField>