force-app/main/default/objects/Experian_Business__c/fields/cfs_Victim_Statement_Indicator__c.field-meta.xml
<CustomField>
    <fullName>cfs_Victim_Statement_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Victim Statement Indicator</label>
    <type>Checkbox</type>
</CustomField>