force-app/main/default/objects/Experian_Business__c/fields/Commercial_Credit_Limit_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Credit_Limit_Recommendation__c</fullName>
    <label>Commercial Credit Limit Recommendation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>