force-app/main/default/objects/Experian_Business__c/fields/Commercial_Dispute_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Dispute_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Dispute Indicator</label>
    <type>Checkbox</type>
</CustomField>