force-app/main/default/objects/Experian_Business__c/fields/Commercial_Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Model_Code__c</fullName>
    <label>Commercial Model Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>