force-app/main/default/objects/Experian_Business__c/fields/Commercial_Model_Title__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Model_Title__c</fullName>
    <label>Commercial Model Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>