force-app/main/default/objects/Experian_Business__c/fields/Commercial_Risk_Code__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Risk_Code__c</fullName>
    <label>Commercial Risk Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>