force-app/main/default/objects/Experian_Business__c/fields/Commercial_Risk_Definition__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Risk_Definition__c</fullName>
    <label>Commercial Risk Definition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>