force-app/main/default/objects/Experian_Business__c/fields/Commercial_Score__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Score__c</fullName>
    <label>Commercial Score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>