force-app/main/default/objects/Experian_Business__c/fields/es_Business_DBT__c.field-meta.xml
<CustomField>
    <fullName>es_Business_DBT__c</fullName>
    <description>executiveSummary businessDbt</description>
    <label>Business DBT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>