force-app/main/default/objects/Experian_Business__c/fields/Executive_Summary_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Summary Indicator</label>
    <type>Checkbox</type>
</CustomField>