force-app/main/default/objects/Experian_Business__c/fields/Financial_Statemen_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statemen_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Statemen Indicator</label>
    <type>Checkbox</type>
</CustomField>