force-app/main/default/objects/Experian_Business__c/fields/FSR_Dispute_Indicator__c.field-meta.xml
<CustomField>
    <fullName>FSR_Dispute_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSR Dispute Indicator</label>
    <type>Checkbox</type>
</CustomField>