force-app/main/default/objects/Experian_Business__c/fields/FSR_Model_Title__c.field-meta.xml
<CustomField>
    <fullName>FSR_Model_Title__c</fullName>
    <label>FSR Model Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>