force-app/main/default/objects/Experian_Business__c/fields/FSR_Risk_Code__c.field-meta.xml
<CustomField>
    <fullName>FSR_Risk_Code__c</fullName>
    <label>FSR Risk Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>