force-app/main/default/objects/Experian_Business__c/fields/FSR_Risk_Definition__c.field-meta.xml
<CustomField>
    <fullName>FSR_Risk_Definition__c</fullName>
    <label>FSR Risk Definition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>