force-app/main/default/objects/Experian_Business__c/fields/FSR_Score__c.field-meta.xml
<CustomField>
    <fullName>FSR_Score__c</fullName>
    <label>FSR Score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>