force-app/main/default/objects/Experian_Business__c/fields/Goverment_Data_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Goverment_Data_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goverment Data Indicator</label>
    <type>Checkbox</type>
</CustomField>