force-app/main/default/objects/Experian_Business__c/fields/Inquiry_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inquiry Indicator</label>
    <type>Checkbox</type>
</CustomField>