force-app/main/default/objects/Experian_Business__c/fields/Number_of_Trade_Lines__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trade_Lines__c</fullName>
    <description>Experian Business Trade Lines Activity</description>
    <label>Number of Trade Lines</label>
    <length>8</length>
    <type>Text</type>
</CustomField>