force-app/main/default/objects/Experian_Business__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Experian Business street address</description>
    <label>Street Address</label>
    <length>60</length>
    <type>Text</type>
</CustomField>