force-app/main/default/objects/Experian_Business__c/fields/UCC_Indicator__c.field-meta.xml
<CustomField>
    <fullName>UCC_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UCC Indicator</label>
    <type>Checkbox</type>
</CustomField>