force-app/main/default/objects/Experian_Business__c/fields/Zip_Extension__c.field-meta.xml
<CustomField>
    <fullName>Zip_Extension__c</fullName>
    <label>Zip Extension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>